# ttr

./: Cargo.toml  README.md  ids.md
examples/: browse.rs
game_logs/log1/: 10_s2c_k1  11_c2s_k1  12_c2s_k1  13_s2c_k1  14_s2c_k1  15_c2s_k1  16_c2s_k1  17_s2c_k1  18_s2c_k1  19_c2s_k1  20_s2c_k1  21_c2s_k1  22_s2c_k1  23_c2s_k1  7_s2c_k1  8_c2s_k1  9_s2c_k1  decodings.txt  log.txt
rng-test/: rng_test.cpp
src/: main.rs
ttr-engine/: Cargo.toml
ttr-engine/resources/europe/: gen_cities.sh  gen_tickets.sh
ttr-engine/src/: lib.rs  player.rs  rand.rs  trains.rs
ttr-engine/src/map/: europe.rs  mod.rs  ticket.rs
ttr-mdns/: Cargo.toml
ttr-mdns/src/: lib.rs
ttr-net/: Cargo.toml
ttr-net/src/: connection.rs  lib.rs  mdns.rs
ttr-protocol/: .gitignore  Cargo.toml  build.rs
ttr-protocol/protos/: ttr.proto
ttr-protocol/src/: lib.rs
ttr-protocol/src/protos/: mod.rs  ttr.rs
ttr-server/: Cargo.toml
ttr-server/src/: dummy.rs  main.rs  mitm.rs  util.rs
