[package]
name = "udplog"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"

[dependencies]
async-dnssd = { git = "https://github.com/stbuehler/rust-async-dnssd" }
futures = "0.3"
structopt = "0.3"
tokio = { version = "0.2", features = ["udp", "macros", "dns"] }
uuid = { version = "0.8", features = ["v4"] }
