[package]
name = "ttr"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-dnssd = { git = "https://github.com/stbuehler/rust-async-dnssd" }
env_logger = "0.7"
futures = "0.3"
log = "0.4"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
